<resources>
    <string name="app_name">Mediam</string>
    <string name="txt_post_title">Titulo</string>
    <string name="txt_post_description">Descripción</string>
    <string name="hint_topic">Topic</string>
    <string name="txt_btn_create_post">Crear</string>
    <string name="txt_btn_edit_post">Editar</string>
    <string name="txt_error_create_post">Error> al crear el post</string>
    <string name="txt_error_update_post">Error> al actualizar el post</string>
    <string name="txt_fields_required">Todos los campos son obligatorios</string>
    <string name="bienvenido_a_mediam">Bienvenido a Mediam</string>
    <string name="logo_de_mediam">Logo de Mediam</string>
    <string name="registrate_en_mediam">¡Registrate en Mediam!</string>
    <string name="logo_usuario">Logo usuario</string>
    <string name="ingrese_su_n_mero_de_documento">Ingrese su número de documento</string>
    <string name="ingrese_sus_nombres_y_apellidos">Ingrese sus nombres y apellidos</string>
    <string name="ingrese_su_e_mail">Ingrese su e-mail</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="atr_s">Atrás</string>
    <string name="ingresar">Ingresar</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_posts">Publicar</string>
    <string name="title_perfil">Perfil</string>
    <string name="publicar">Publicar</string>
    <string name="perfil">Perfil</string>
    <string name="title_buscar">Buscar</string>
    <string name="seguidores">Seguidores</string>
    <string name="siguiendo">Siguiendo</string>
    <string name="description_fab_create_post">Crear post</string>
    <string name="reset">Limpiar</string>
    <string name="txt_hint_titulo_search">Titulo</string>
    <string name="txt_hint_description_search">Descripción</string>
    <string name="imagen_post">Imagen post</string>
    <string name="categor_a">Categoría:</string>
    <string name="contenido_de_la_publicaci_n">Contenido de la publicación:</string>
    <string name="ir_atr_s">Ir Atrás</string>
    <string name="editar_post">Editar post</string>
</resources>