<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mediam.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_posts"
        android:name="com.example.mediam.ui.posts.PostsFragment"
        android:label="@string/title_posts"
        tools:layout="@layout/fragment_posts" />

    <fragment
        android:id="@+id/navigation_search_users"
        android:name="com.example.mediam.ui.buscar.BuscarFragment"
        android:label="@string/title_buscar"
        tools:layout="@layout/buscar_fragment" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.mediam.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>