<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.mediam.login.viewModel.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".login.view.Register">


            <ImageView
                android:id="@+id/img_user_register"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/logo_usuario"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_register" />


            <TextView
                android:id="@+id/text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="70dp"
                android:text="@string/registrate_en_mediam"
                android:textColor="@color/purple_500"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/edit_doc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:hint="@string/ingrese_su_n_mero_de_documento"
                android:inputType="number"
                android:text="@={viewmodel.user.documento}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_user_register" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:hint="@string/ingrese_sus_nombres_y_apellidos"
                android:text="@={viewmodel.user.nombre}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_doc" />

            <EditText
                android:id="@+id/edit_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:hint="@string/ingrese_su_e_mail"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.user.email}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_name" />


            <EditText
                android:id="@+id/edit_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:hint="@string/ingrese_su_contrase_a"
                android:inputType="textPassword"
                android:text="@={viewmodel.user.password}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_correo" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="64dp"
                android:text="@string/registrarse"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btn_back"
                app:layout_constraintTop_toBottomOf="@id/edit_pass" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="64dp"
                android:text="@string/atr_s"
                app:layout_constraintLeft_toRightOf="@id/btn_register"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_pass" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>