<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".PostDetailActivity">


            <ImageView
                android:id="@+id/img_post_detail"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/imagen_post"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_post_detail" />


            <TextView
                android:id="@+id/title_post_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:fontFamily="@font/bungee"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/desc_post_detail_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:text="@string/contenido_de_la_publicaci_n"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/secular"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_post_detail"/>

            <TextView
                android:id="@+id/desc_post_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/secular"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/desc_post_detail_title"/>

            <TextView
                android:id="@+id/topic_post_detail_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:text="@string/categor_a"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/secular"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/desc_post_detail"/>

            <TextView
                android:id="@+id/topic_post_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/secular"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topic_post_detail_title"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>